--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://amitvaghela.github.io
-title: My Blog
+title: Amit Vaghela
 subtitle: Thoughts on iOS developement
 author: Amit Vaghela
 simple_search: https://www.google.com/search
